<resources>
    <string name="app_name">CourseDo</string>
    <string name="splash_title">CourseDo</string>
    <string name="splash_subtitle">Developed By:</string>
    <string name="splash_subtitle2">Rahul_Morajker Gavin_Pereira Aaron_Vaz</string>
    <string name="sign_in_title">SIGN IN</string>
    <string name="id_hint">ENTER EMAIL</string>
    <string name="fname_hint">ENTER FIRST NAME</string>
    <string name="lname_hint">ENTER LAST NAME</string>
    <string name="pass_hint">ENTER PASSWORD</string>
    <string name="pass2_hint">ENTER PASSWORD AGAINN</string>
    <string name="submit_btn">SUBMIT</string>
    <string name="show_pass">SHOW PASSWORD</string>
    <string name="profile_title">MY PROFILE</string>
    <string name="profile_view_details">View Details</string>
    <string name="profile_update_name">Edit Name</string>
    <string name="profile_update_password">Change Password</string>
    <string name="customlayout_idhint">ENTER ID</string>
    <string name="customlayout_loc">* * * * * * </string>
    <string name="customlayout_oldlabel">OLD NAME:</string>
    <string name="customlayout_newlabel">NEW NAME:</string>
    <string name="customlayout_fnamehint">ENTER FIRST-NAME</string>
    <string name="customlayout_lnamehint">ENTER LAST-NAME</string>
    <string name="customlayout_cancel">CANCEL</string>
    <string name="customlayout_submit">SUBMIT</string>
    <string name="passlayout_oldpasslabel">OLD PASSWORD:</string>
    <string name="passlayout_oldpasshint">Old Password</string>
    <string name="passlayout_newpasslabel">NEW PASSWORD:</string>
    <string name="passlayout_newpasshint">New Password</string>
    <string name="passlayout_submitbtn">CHANGE PASSWORD</string>
    <string name="passlayout_showpass">Show Password</string>
    <string name="signout_1">App is in offline mode. On signing out all data will be lost.</string>
    <string name="signout_2">Are you sure you want to sign out?</string>
    <string name="signout_yes">YES</string>
    <string name="signout_no">NO</string>
    <string name="ac_title">ENTER DETAILS</string>
    <string name="ac_sub_name">ENTER SUBJECT NAME</string>
    <string name="ac_classroom_name">ENTER CLASSROOM NAME</string>
    <string name="ac_submit">ADD COURSE</string>
    <string name="dc_delete">DELETE COURSE</string>
    <string name="classroom_icon">Course Icon</string>
    <string name="about_edit">EDIT DETAILS</string>
    <string name="about_save">SAVE AND EXIT</string>
    <string name="view_about">VIEW ABOUT</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="as_id">ID/ROLL NO.</string>
    <string name="as_fname">FIRST NAME</string>
    <string name="as_lname">LAST NAME</string>
    <string name="vs_title">ENTER DETAILS</string>
    <string name="vs_id_hint">ENTER ID</string>
    <string name="vs_fname_hint">ENTER FIRST NAME</string>
    <string name="vs_lname_hint">ENTER LAST NAME</string>
    <string name="vs_submit">DONE</string>
    <string name="vs_cancel">CANCEL</string>
    <string name="ds_id_hint">ENTER STUDENT ID</string>
    <string name="ds_submit">DELETE STUDENT</string>
    <string name="attent_submit">ADD TIME AND DATE</string>
    <string name="attend_cancel">CANCEL</string>
    <string name="attend_submit">SUBMIT</string>
    <string name="ass_title">ENTER DETAILS</string>
    <string name="ass_name_hint">ENTER ASSESSMENT NAME</string>
    <string name="ass_submit">ADD</string>
    <string name="delete_ass">DELETE</string>
    <string name="grade_grade">GRADE</string>
    <string name="vgrade_ac">VIEW MARKS</string>
    <string name="agrade_ac">ADD MARKS</string>
    <string name="grade_mk_hint">Grade Marks Out of?</string>
    <string name="grade_mk_submit">ADD MARKS</string>

</resources>