<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ac_title"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/classroom_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ac_classroom_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/subject_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/ac_sub_name"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ac_submit" />

        <Button
            android:id="@+id/ac_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customlayout_cancel" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>