<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/ac_title"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/as_id"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/as_fname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextTextPersonName5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:hint="@string/as_lname"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/add_student"
            android:textSize="18sp"
            app:backgroundTint="#0da314" />

        <Button
            android:id="@+id/button15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/customlayout_cancel"
            android:textSize="18sp"
            app:backgroundTint="#0da314" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>