<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:text="@string/ass_title"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextTextPersonName11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/carter_one"
            android:gravity="center"
            android:inputType="textPersonName"
            android:text="@string/ass_name_hint"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/delete_ass"
            android:textSize="16sp"
            app:backgroundTint="#0da314" />

        <Button
            android:id="@+id/button26"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/customlayout_cancel"
            android:textSize="16sp"
            app:backgroundTint="#0da314" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>