<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/grade_outofmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/carter_one"
            android:hint="@string/grade_mk_hint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/button27"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/grade_mk_submit"
            android:textSize="16sp"
            app:backgroundTint="#0da314" />

        <Button
            android:id="@+id/button28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/carter_one"
            android:text="@string/customlayout_cancel"
            android:textSize="16sp"
            app:backgroundTint="#0da314" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>